--- a/README.html
+++ b/README.html
@@ -1,31 +1,20 @@
 
-## 🛠️ 
+| Programming Languages |
+| -|
+| <img width="50em" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" /> |
 
-If I'm not taking something apart to understand how it works, I'm fixing something that I broke while taking it apart to understand how it worked. 
+| Frameworks and Libraries | 
+| - |
+<img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" /> <img width='50em' src="https://upload.wikimedia.org/wikipedia/commons/6/6b/JUCE_Logo.png?20160127093944" />  <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jquery/jquery-original.svg" /> <img width='50em' style="background-color: lightgrey" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" />  
 
-## 🔎 
+| Database Technology | 
+| - |
+<img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
 
-Curiosity, knowledge, growth and improvement are all motivators for me to keep expanding upon my various disciplines of study. I continually draw upon my varied experiences from the music, management, HVAC, plumbing, culinary and coding worlds. I combine them with my explorations of philosophy and logic in order to enrich my life and the lives of others.
+| Version Control and Collaboration | 
+| - |
+<img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" />  <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/slack/slack-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/trello/trello-plain.svg" />
 
-## 🎹 <kbd>+</kbd> 💻 
-
-Currently, my primary focus is on computer programming with the ultimate goal of creating software-based musical instruments that are accessible to individuals of all skill levels, including those who are new to music as well as experienced musicians. I am motivated to develop these tools in order to provide a intuitive and creative platform for people to explore and express their musical abilities.
-
-
-<!-- https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md -->
-![Intuitive Harmony's GitHub stats](https://github-readme-stats.vercel.app/api?username=intuitiveharmony&show_icons=true&theme=ocean_dark)
-
-<!--
-**IntuitiveHarmony/IntuitiveHarmony** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-
-Here are some ideas to get you started:
-
-- 🔭 I’m currently working on ...
-- 🌱 I’m currently learning ...
-- 👯 I’m looking to collaborate on ...
-- 🤔 I’m looking for help with ...
-- 💬 Ask me about ...
-- 📫 How to reach me: ...
-- 😄 Pronouns: ...
-- ⚡ Fun fact: ...
--->
+| Development Tools | 
+| - |
+<img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/heroku/heroku-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/markdown/markdown-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/xcode/xcode-original.svg" /> <img width='50em' src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apple/apple-original.svg" />
